--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -60,27 +60,29 @@
         <div class="container container-servicos">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-primary">SOLUÇOES</h2>
+                    <h2 class="text-primary">SOLUÇÕES</h2>
                     <p class="mt-3 mb-4">Oferecemos um grande leque de serviços para atender as necessidades de nossos clientes. Com produtos de alta qualidade e profissionais qualificados, podemos oferecer soluções personalizadas e de qualidade.</p>
                 </div>
             </div>
-            <div class="row mt-5">
-                <div class="col-lg-6 col-md-12">
-                    <div class="servicos-content">
-                        <h3 class="display-6">Podemos lhe oferecer</h3>
-                        <hr>
-                        <p>Oferecemos serviços especializados de grande qualidade, assim produzimos soluções diversificadas para sua empresa e seus projetos.</p>
-                        <div class="topicos">
-                            <span>DESENVOLVIMENTO</span>
-                            <span>SILK-SCREEN</span>
-                            <span>ACABAMENTO</span>
+            <div class="container">
+                <div class="row mt-4">
+                    <div class="col-lg-6 col-md-12 align-self-center">
+                        <div class="servicos-content">
+                            <h3 class="display-6">Podemos lhe oferecer</h3>
+                            <hr>
+                            <p>Serviços especializados de grande qualidade, assim produzimos soluções diversificadas para sua empresa e seus projetos.</p>
+                            <div class="topicos">
+                                <span>DESENVOLVIMENTO</span>
+                                <span>SILK-SCREEN</span>
+                                <span>ACABAMENTO</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="servicos-content-img">
-                        <p>Todas as fases do seu produto em um só lugar</p>
-                        <img src="../assets/img/png/servicos-3.png" alt="img serviços">
+                    <div class="col-lg-6 col-md-12 align-self-center">
+                        <div class="servicos-content-img">
+                            <p>Todas as fases do seu produto em um só lugar</p>
+                            <img src="../assets/img/png/servicos-3.png" class="img-fluid" alt="img serviços">
+                        </div>
                     </div>
                 </div>
             </div>
