--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container container-top">
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center container-content">
-                    <h1 class=" text-white h1-top mt-5">Tudo o que você precisa em Silk-Screen !</h1>
+                    <h1 class="display-4 text-white h1-top mt-5">Tudo o que você precisa em impressão Silk-Screen !</h1>
                     <p class="text-white my-3 p-top">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade.</p>
                     <a class="btn btn-secondary" href="#">Conheça os nossos serviços</a>
                 </div>
