--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!--FIM NAVBAR-->
     <!--INICIO SECTION HOME INICIAL-->
     <section class="inicial-home d-flex align-items-center overflow-hidden">
-        <div class="container container-top">
+        <div class="container ">
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center container-content">
                     <h1 class="display-4 text-white h1-top mt-5">Tudo o que você precisa em impressão Silk-Screen !</h1>
