--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -46,7 +46,7 @@
     <!--FIM NAVBAR-->
     <!--INICIO SECTION SERVIÇOS INICIAL-->
     <section class="inicial-servicos d-flex align-items-center overflow-hidden">
-        <div class="container container-top">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center container-content-servicos">
                     <h2 class="display-4 text-white">NOSSOS SERVIÇOS</h2>
@@ -55,7 +55,7 @@
         </div>
     </section>
     <!--FIM SECTION SERVIÇOS INICIAL-->
-    <!--iNICIO SECTION SERVIÇOS SECUNDARIA-->
+    <!--INICIO SECTION SERVIÇOS SECUNDARIA-->
     <section id="section-servicos" class="secundaria-home overflow-hidden">
         <div class="container container-servicos">
             <div class="row">
@@ -89,79 +89,31 @@
         </div>
     </section>
     <!--FIM SECTION SERVIÇOS SECUNDARIA-->
-
-    <!--FIM CTA-->
-    <!--FIM CTA-->
-    <!--FIM CTA-->
-    <!--FIM CTA-->
-    <!--FIM CTA-->
-    <!--FIM CTA-->
-    <!--iNICIO SECTION HOME PRODUTOS-->
-    <section class="secundaria-produtos">
+    <!--INICIO SECTION SERVIÇOS EXPLICATIVO-->
+    <section id="servicos-exp">
         <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="text-primary">NOSSOS PRODUTOS</h2>
-                    <p class="mt-3 mb-4 sub-title-produtos">Aqui você vai encontrar tudo o que precisa</p>
+            <div class="row justify-content-evenly">
+                <div class="col-lg-3 col-md-12 mt-5 container-content-exp">
+                    <h3 class="text-warning mt-5">Desenvolvimento</h3>
+                    <p class="text-white mt-4 text-center">Desenvolvemos o seu produto conforme a sua necessidades, respeitando o DNA da sua empresa. Assim garantimos a sua satisfição do inicio ao fim.
+                    </p>
                 </div>
-                <div class="row gy-4 mt-5">
-                    <div class="col-lg-6 col-md-12">
-                        <div class="produtos">
-                            <h3 class="display-6">Exelentes Produtos</h3>
-                            <p>Fabricamos teclados de membrana, painéis frontais, etiquetas silk e digital nos mais diversos tipos de materiais.</p>
-                            <a class="btn btn-danger" href="#">Nossos produtos</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-12 mt-4 container-carrosel">
-                        <div class="produtos">
-                            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                                <div class="carousel-indicators">
-                                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                                </div>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active" data-bs-interval="10000">
-                                        <img src="./assets/img/slider/sld-1.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="./assets/img/slider/sld-4.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./assets/img/slider/sld-2.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="./assets/img/slider/sld-3.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                  <span class="visually-hidden">Previous</span>
-                                </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                  <span class="visually-hidden">Next</span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-lg-3 col-md-12 container-content-exp">
+                    <h3 class="text-warning mt-5">Impressão</h3>
+                    <p class="text-white mt-4 text-center">No Silk-Screen conseguimos dar vida aos seus projetos. Tudo com a maior eficiência e qualidade. Os nossos profissionais são altamente qualificados, assim garantimos o melhor resultado final.
+                    </p>
                 </div>
+                <div class="col-lg-3 col-md-12 mt-5 container-content-exp">
+                    <h3 class="text-warning mt-5">Acabamento</h3>
+                    <p class="text-white mt-4 text-center">Montamos e finalizamos os nossos produtos, de acordo com a necessidade dos nossos clientes. Adesivamos,montamos, estampamos e testamos todos os nossos produtos.</p>
+                </div>
+            </div>
+            <div class="bg-body mt-5">
+                <h4 class="text-center text-danger">Entre em contato conosco e tire todas as suas dúvidas</h4>
             </div>
         </div>
     </section>
-    <!--FIM SECTION HOME SECUNDARIA-->
+    <!--FIM SECTION SERVIÇOS EXPLICATIVO-->
     <!--INICIO FOOTER-->
     <footer class="footer text-white pt-5 pb-4">
         <div class="container text-center text-md-left ">
@@ -170,7 +122,7 @@
 
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-5 mb-5 ">
                     <a href="# ">
-                        <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
+                        <img src="../assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
