--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -108,10 +108,10 @@
                     <p class="text-white mt-4 text-center">Montamos e finalizamos os nossos produtos, de acordo com a necessidade dos nossos clientes. Adesivamos,montamos, estampamos e testamos todos os nossos produtos.</p>
                 </div>
             </div>
-            <div class="bg-body mt-5">
-                <h4 class="text-center text-danger">Entre em contato conosco e tire todas as suas dúvidas</h4>
-            </div>
+
         </div>
+        <br>
+        <h3 class="mt-5 text-center text-danger p-4 bg-body">"Entre em contato conosco e tire todas as suas dúvidas."</h3>
     </section>
     <!--FIM SECTION SERVIÇOS EXPLICATIVO-->
     <!--INICIO FOOTER-->
