--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="col-lg-7 mx-auto text-center container-content">
                     <h1 class="display-4 text-white h1-top mt-5">Tudo o que você precisa em impressão Silk-Screen !</h1>
                     <p class="text-white my-3 p-top">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade.</p>
-                    <a class="btn btn-secondary" href="#">Conheça os nossos serviços</a>
+                    <a class="btn btn-secondary" href="./pages/servicos.html">Conheça os nossos serviços</a>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
                     <p class="text-white">Confira tudo o que podemos lhe oferecer!</p>
                 </div>
                 <div class="col-auto">
-                    <a href="#" class="btn btn-cta mt-4">Saiba Mais</a>
+                    <a href="./pages/servicos.html" class="btn btn-cta mt-4">Saiba Mais</a>
                 </div>
             </div>
         </div>
@@ -156,7 +156,7 @@
                         <div class="produtos">
                             <h3 class="display-6">Exelentes Produtos</h3>
                             <p>Fabricamos teclados de membrana, painéis frontais, etiquetas silk e digital nos mais diversos tipos de materiais.</p>
-                            <a class="btn btn-danger" href="#">Nossos produtos</a>
+                            <a class="btn btn-danger" href="./pages/produtos.html">Nossos produtos</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 mt-4 container-carrosel">
