--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -73,7 +73,7 @@
                             <p>Serviços especializados de grande qualidade, assim produzimos soluções diversificadas para sua empresa e seus projetos.</p>
                             <div class="topicos">
                                 <span>DESENVOLVIMENTO</span>
-                                <span>SILK-SCREEN</span>
+                                <span>IMPRESSÃO</span>
                                 <span>ACABAMENTO</span>
                             </div>
                         </div>
