--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="# "><img class="logo " src="./assets/img/logo.png " alt="Logo MDM "></a>
+                <a class="navbar-brand" href="/"><img class="logo " src="./assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
@@ -29,16 +29,16 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="./pages/servicos.html">Serviços</a>
+                            <a class="nav-link " href="servicos.html">Serviços</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="./pages/produtos.html">Produtos</a>
+                            <a class="nav-link " href="produtos.html">Produtos</a>
                         </li>
                         <li class="nav-item mb-2">
-                            <a class="nav-link" href="./pages/sobre.html">Sobre</a>
+                            <a class="nav-link" href="sobre.html">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn-secondary-c" href="./pages/contato.html">Contato</a>
+                    <a class="btn-secondary-c" href="contato.html">Contato</a>
                 </div>
             </div>
         </nav>
@@ -51,7 +51,7 @@
                 <div class="col-lg-7 mx-auto text-center container-content">
                     <h1 class="display-4 text-white h1-top mt-5">Tudo o que você precisa em impressão Silk-Screen !</h1>
                     <p class="text-white my-3 p-top">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade.</p>
-                    <a class="btn btn-secondary" href="./pages/servicos.html">Conheça os nossos serviços</a>
+                    <a class="btn btn-secondary" href="servicos.html">Conheça os nossos serviços</a>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
                     <p class="text-white">Confira tudo o que podemos lhe oferecer!</p>
                 </div>
                 <div class="col-auto">
-                    <a href="./pages/servicos.html" class="btn btn-cta mt-4">Saiba Mais</a>
+                    <a href="servicos.html" class="btn btn-cta mt-4">Saiba Mais</a>
                 </div>
             </div>
         </div>
@@ -156,7 +156,7 @@
                         <div class="produtos">
                             <h3 class="display-6">Exelentes Produtos</h3>
                             <p>Fabricamos teclados de membrana, painéis frontais, etiquetas silk e digital nos mais diversos tipos de materiais.</p>
-                            <a class="btn btn-danger" href="./pages/produtos.html">Nossos produtos</a>
+                            <a class="btn btn-danger" href="produtos.html">Nossos produtos</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 mt-4 container-carrosel">
@@ -227,26 +227,26 @@
                 <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Teclados de Membrana</a>
+                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Paineis Frontais</a>
+                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Paineis Frontais</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Etiquetas</a>
+                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Etiquetas</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Telas</a>
+                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Telas</a>
                     </p>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 contato">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
-                    <a href="#">
+                    <a href="contato.html">
                         <p class="text-white">
                             <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
-                    <a href="#">
+                    <a href="contato.html">
                         <p class="text-white p-mail">
                             <i class="bi bi-envelope">&nbsp;</i><span class="email"> dmdmembranas@gmail.com</span>
                         </p>
