--- a/produtos.html
+++ b/produtos.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center container-content-servicos">
-                    <h2 class="display-4 text-white">NOSSOS PRODUTOS</h2>
+                    <h2 class="display-4 text-white shdw">NOSSOS PRODUTOS</h2>
                 </div>
             </div>
         </div>
