--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <!-- ANIMAÇÕES CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <!-- CSS PERSONALIZADO -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <!-- CSS PERSONALIZADO -->
     <link rel="stylesheet" href="./assets/css/main.css">
 
@@ -26,7 +25,7 @@
                 <a class="navbar-brand" href="/"><img class="logo " src="./assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
-                    <ul class="navbar-nav ms-auto px-3">
+                    <ul class="navbar-nav  ms-auto px-3">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
@@ -163,6 +162,7 @@
                     </div>
                     <div class="col-lg-6 col-md-12 mt-4 container-carrosel">
                         <div class="produtos">
+
                             <div id="carouselDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -176,19 +176,18 @@
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
-                                    <div class="carousel-item">
+                                    <div class="carousel-item" data-bs-interval="10000">
                                         <img src="./assets/img/slider/sld-4.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
-
                                         </div>
                                     </div>
-                                    <div class="carousel-item" data-bs-interval="2000">
+                                    <div class="carousel-item" data-bs-interval="1000">
                                         <img src="./assets/img/slider/sld-2.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
 
                                         </div>
                                     </div>
-                                    <div class="carousel-item">
+                                    <div class="carousel-item" data-bs-interval="10000">
                                         <img src="./assets/img/slider/sld-3.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
 
@@ -261,7 +260,7 @@
     <!--FIM FOOTER-->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/main.js "></script>
 </body>
 
