--- a/produtos.html
+++ b/produtos.html
@@ -56,37 +56,25 @@
     </section>
     <!--FIM SECTION SERVIÇOS INICIAL-->
     <!--INICIO SECTION SERVIÇOS SECUNDARIA-->
-    <section id="section-servicos" class="secundaria-home overflow-hidden">
+    <section id="section-produtos" class="secundaria-home overflow-hidden">
         <div class="container container-servicos">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="text-primary">SOLUÇÕES</h2>
-                    <p class="mt-3 mb-4">Oferecemos um grande leque de serviços para atender as necessidades de nossos clientes. Com produtos de alta qualidade e profissionais qualificados, podemos oferecer soluções personalizadas e de qualidade.</p>
+            <div class="row justify-content-around">
+                <div class="col-md-12 mb-5">
+                    <h2 class="text-white mb-2 bg-primary p-3">Teclado de Membrana</h2>
                 </div>
-            </div>
-            <div class="container">
-                <div class="row mt-4">
-                    <div class="col-lg-6 col-md-12 align-self-center">
-                        <div class="servicos-content">
-                            <h3 class="display-6">Podemos lhe oferecer</h3>
-                            <hr>
-                            <p>Serviços especializados de grande qualidade, assim produzimos soluções diversificadas para sua empresa e seus projetos.</p>
-                            <div class="topicos">
-                                <span>DESENVOLVIMENTO</span>
-                                <span>IMPRESSÃO</span>
-                                <span>ACABAMENTO</span>
-                            </div>
-                        </div>
+                <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
+                    <div class="produtos-content img-fluid">
+                        <img src="assets/img/slider/sld-1.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
+
                     </div>
-                    <div class="col-lg-6 col-md-12 align-self-center">
-                        <div class="servicos-content-img">
-                            <p>Todas as fases do seu produto em um só lugar</p>
-                            <img src="../assets/img/png/servicos-3.png" class="img-fluid" alt="img serviços">
-                        </div>
-                    </div>
+                </div>
+                <div class="col-lg-7 col-md-12" style="width: 600px; ; margin: 0 auto; align-self: center;">
+                    <p style="width: 100%;font-size: 18px;">Produzidos em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Confeccionado com impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.</p>
+
                 </div>
             </div>
         </div>
+
     </section>
     <!--FIM SECTION SERVIÇOS SECUNDARIA-->
     <!--INICIO SECTION SERVIÇOS EXPLICATIVO-->
