--- a/servicos.html
+++ b/servicos.html
@@ -11,7 +11,7 @@
     <!-- ANIMAÇÕES CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- CSS PERSONALIZADO -->
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
 
     <title>DMD - Teclados de membrana</title>
 </head>
