--- a/produtos.html
+++ b/produtos.html
@@ -21,24 +21,24 @@
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="# "><img id="logo-person" src="../assets/img/logo.png " alt="Logo MDM "></a>
+                <a class="navbar-brand" href="# "><img id="logo-person" src="./assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item ">
-                            <a class="nav-link" href="../index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="./servicos.html">Serviços</a>
+                            <a class="nav-link " href="servicos.html">Serviços</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link " href="produtos.html">Produtos</a>
                         </li>
                         <li class="nav-item mb-2">
-                            <a class="nav-link" href="./sobre.html">Sobre</a>
+                            <a class="nav-link" href="sobre.html">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn-secondary-c" href="./contato.html">Contato</a>
+                    <a class="btn-secondary-c" href="contato.html">Contato</a>
                 </div>
             </div>
         </nav>
