--- a/servicos.html
+++ b/servicos.html
@@ -21,24 +21,24 @@
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="# "><img id="logo-person" src="../assets/img/logo.png " alt="Logo MDM "></a>
+                <a class="navbar-brand" href="# "><img id="logo-person" src="./assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item ">
-                            <a class="nav-link" href="../index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link " href="servicos.html">Serviços</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="./produtos.html">Produtos</a>
+                            <a class="nav-link " href="produtos.html">Produtos</a>
                         </li>
                         <li class="nav-item mb-2">
-                            <a class="nav-link" href="./sobre.html">Sobre</a>
+                            <a class="nav-link" href="sobre.html">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn-secondary-c" href="./contato.html">Contato</a>
+                    <a class="btn-secondary-c" href="contato.html">Contato</a>
                 </div>
             </div>
         </nav>
@@ -81,7 +81,7 @@
                     <div class="col-lg-6 col-md-12 align-self-center">
                         <div class="servicos-content-img">
                             <p>Todas as fases do seu produto em um só lugar</p>
-                            <img src="../assets/img/png/servicos-3.png" class="img-fluid" alt="img serviços">
+                            <img src="./assets/img/png/servicos-3.png" class="img-fluid" alt="img serviços">
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
 
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-5 mb-5 ">
                     <a href="# ">
-                        <img src="../assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
+                        <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
